fix overflow

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,4 +1,4 @@
-#main {
+.page {
   overflow-x: hidden;
 }
 
